added main content area

--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
       <div class="main-slider">
 
       </div>
+      <div class="main-container"> 
+        <div class="top-banner"></div>
+        <div class="main-content"></div>
+          <div class="content">
+            <h2>This is the main content</h2>
+          </div>
+          <aside class="right-sidebar"></aside>
+      </div>
   </body>
 </html>
