--- a/index.html
+++ b/index.html
@@ -24,11 +24,50 @@
       </div>
       <div class="main-container"> 
         <div class="top-banner"></div>
-        <div class="main-content"></div>
+        <div class="main-content">
           <div class="content">
             <h2>This is the main content</h2>
+            <div class="bg-content-top"></div>
+            
+            <article class="article-items">
+              <section class="article-item">
+                <hgroup><h1>Latest Workout Articles</h1></hgroup>
+                <div class="article-banner"></div>
+                <div class="sub-articles">
+                  <ul>
+                    <li>
+                      <div class="sub-article-banner">
+                        <img src="./img/slider/sm-article-img1.jpg" alt="banner 1">
+                      </div>
+                    <span class="pill">WORKOUTS</span>
+                    <h2>How To Program Your Biceps Training For Pain-Free Gains</h2>
+                    <p>It's an arm workout as old as time: heavy barbell curls, then dumbbells, then hammer or reverse curls. But, turning it on its head might be the best choice you make this year for your elbows, shoulders, and yes, for your biceps!</p>
+                    </li>
+                    <li>
+                        <div class="sub-article-banner">
+                            <img src="./img/slider/sm-article-img2.jpg" alt="banner 1">
+                        </div>
+                      <span class="pill">WORKOUTS</span>
+                      <h2>How To Program Your Biceps Training For Pain-Free Gains</h2>
+                      <p>It's an arm workout as old as time: heavy barbell curls, then dumbbells, then hammer or reverse curls. But, turning it on its head might be the best choice you make this year for your elbows, shoulders, and yes, for your biceps!</p>
+                      </li>
+                      <li>
+                          <div class="sub-article-banner">
+                              <img src="./img/slider/sm-article-img3.jpg" alt="banner 1">
+                          </div>
+                        <span class="pill">WORKOUTS</span>
+                        <h2>How To Program Your Biceps Training For Pain-Free Gains</h2>
+                        <p>It's an arm workout as old as time: heavy barbell curls, then dumbbells, then hammer or reverse curls. But, turning it on its head might be the best choice you make this year for your elbows, shoulders, and yes, for your biceps!</p>
+                      </li>
+                  </ul>
+                </div>
+              </section>
+            </article>
           </div>
-          <aside class="right-sidebar"></aside>
+          <aside class="right-sidebar">
+            <div class="sidebar-banner"></div>
+          </aside>
+        </div>
       </div>
   </body>
 </html>
