added legal text on footer

--- a/index.html
+++ b/index.html
@@ -70,4 +70,11 @@
         </div>
       </div>
   </body>
+  <footer>
+    <div class="footer-contatiner">
+      <span>
+        (C) Created by Hao Yin Lin -- For Educational Purposes ONLY!
+      </span>
+    </div>
+  </footer>
 </html>
