--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="top-banner"></div>
         <div class="main-content">
           <div class="content">
-            <h2>This is the main content</h2>
+            <!-- <h2>This is the main content</h2> -->
             <div class="bg-content-top"></div>
             
             <article class="article-items">
@@ -71,7 +71,7 @@
       </div>
   </body>
   <footer>
-    <div class="footer-contatiner">
+    <div class="footer-container">
       <span>
         (C) Created by Hao Yin Lin -- For Educational Purposes ONLY!
       </span>
