added footer text and cards

--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
   </body>
   <footer>
     <div class="footer-container">
+      <ul class="card-list">
+        <li><a href="#"><img src="./img/1.jpg"></a></li>
+        <li><a href="#"><img src="./img/2.jpg"></a></li>
+        <li><a href="#"><img src="./img/3.jpg"></a></li>
+        <li><a href="#"><img src="./img/4.jpg"></a></li>
+        <li><a href="#"><img src="./img/5.jpg"></a></li>
+        <li><a href="#"><img src="./img/6.jpg"></a></li>
+
+      </ul>
+      <ul class="footer-links">
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Site Map</a></li>
+        <li><a href="#">Advertise with Us</a></li>
+        <li><a href="#">Affiliates</a></li>
+      </ul>
       <span>
         (C) Created by Hao Yin Lin -- For Educational Purposes ONLY!
       </span>
