final version for Tuesday 2/27

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
         <li><a href="#">Advertise with Us</a></li>
         <li><a href="#">Affiliates</a></li>
       </ul>
+      <p class="footer-text">© 2018 Bodybuilding.com. All rights reserved. Bodybuilding.com℠ and BodySpace® are trademarks of Bodybuilding.com.</p>
+      <p class="footer-text">Always consult with a qualified healthcare professional prior to beginning any diet or exercise program or taking any dietary supplement. The content on our website is for informational and educational purposes only and is not intended as medical advice or to replace a relationship with a qualified healthcare professional.</p>
+      <p class="footer-text">©  Bodybuilding.com, 5777 N. Meeker Ave.  Boise ID  83713  USA  1-866-236-8417</p>
       <span>
         (C) Created by Hao Yin Lin -- For Educational Purposes ONLY!
       </span>
